services/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nine
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/part-of: ninekube
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nextcloud
