services/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nine
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/part-of: ninekube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cloud.nine.local
      secretName: nextcloud-tls
  rules:
    - host: cloud.nine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
